Semantic/y.output
Terminals unused in grammar

   CONST
   ENUM
   GOTO
   SIZEOF
   STRUCT
   UNION
   VOLATILE
   INCDEC_OP


State 47 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: EXTERNAL_DECLARATION
    2        | PROGRAM EXTERNAL_DECLARATION

    3 EXTERNAL_DECLARATION: FUNCTION_DEFINITION
    4                     | DECLARATION

    5 DECLARATION: DECLARATION_SPECIFIER INIT_DECLARATOR_LIST ';'

    6 DECLARATION_SPECIFIER: STORAGE_CLASS_SPECIFIER
    7                      | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIER
    8                      | TYPE_SPECIFIER
    9                      | TYPE_SPECIFIER DECLARATION_SPECIFIER

   10 STORAGE_CLASS_SPECIFIER: TYPEDEF
   11                        | EXTERN
   12                        | STATIC
   13                        | AUTO
   14                        | REGISTER

   15 TYPE_SPECIFIER: VOID
   16               | CHAR
   17               | SHORT
   18               | INT
   19               | LONG
   20               | FLOAT
   21               | DOUBLE
   22               | SIGNED
   23               | UNSIGNED

   24 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   25                     | INIT_DECLARATOR_LIST ',' INIT_DECLARATOR

   26 INIT_DECLARATOR: DECLARATOR
   27                | DECLARATOR '=' EXPRESSION
   28                | DECLARATOR '=' STRING_LITERAL

   29 DECLARATOR: IDENTIFIER
   30           | '(' DECLARATOR ')'
   31           | DECLARATOR '[' CONSTANT ']'
   32           | DECLARATOR '[' ']'
   33           | FUNCTION_DECLARATION

   34 FUNCTION_DECLARATION: IDENTIFIER '(' DECLARATION_SPECIFIER_LIST ')'
   35                     | IDENTIFIER '(' ')'

   36 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER '(' ')' COMPOUND_STATEMENT
   37                    | DECLARATION_SPECIFIER IDENTIFIER '(' DEFINITION_SPECIFIER_LIST ')' COMPOUND_STATEMENT

   38 DECLARATION_SPECIFIER_LIST: DECLARATION_SPECIFIER_LIST ',' DECLARATION_SPECIFIER
   39                           | DECLARATION_SPECIFIER

   40 DEFINITION_SPECIFIER_LIST: VARIABLE_DECLARATION
   41                          | DEFINITION_SPECIFIER_LIST ',' VARIABLE_DECLARATION

   42 VARIABLE_DECLARATION: DECLARATION_SPECIFIER IDENTIFIER

   43 COMPOUND_STATEMENT: '{' STATEMENT_LIST '}'
   44                   | '{' '}'

   45 STATEMENT_LIST: STATEMENT_LIST STATEMENT
   46               | STATEMENT

   47 STATEMENT: LABELED_STATEMENT
   48          | COMPOUND_STATEMENT
   49          | EXPRESSION_STATEMENT
   50          | ITERATION_STATEMENT
   51          | SELECTION_STATEMENT
   52          | JUMP_STATEMENT
   53          | DECLARATION
   54          | error ';'

   55 LABELED_STATEMENT: CASE EXPRESSION ':' STATEMENT
   56                  | DEFAULT ':' STATEMENT

   57 EXPRESSION_STATEMENT: ';'
   58                     | EXPRESSION ';'

   59 EXPRESSION: IDENTIFIER ASSIGN_OP EXPRESSION
   60           | IDENTIFIER '=' EXPRESSION
   61           | EXPRESSION EQU_OP EXPRESSION
   62           | EXPRESSION REL_OP EXPRESSION
   63           | EXPRESSION ADD_OP EXPRESSION
   64           | EXPRESSION MUL_OP EXPRESSION
   65           | EXPRESSION LAND EXPRESSION
   66           | EXPRESSION LOR EXPRESSION
   67           | EXPRESSION BOR EXPRESSION
   68           | EXPRESSION BAND EXPRESSION
   69           | EXPRESSION BXOR EXPRESSION
   70           | NOT_OP EXPRESSION
   71           | '(' EXPRESSION ')'
   72           | IDENTIFIER
   73           | CONSTANT
   74           | FUNCTION_CALL

   75 FUNCTION_CALL: IDENTIFIER '(' ')'
   76              | IDENTIFIER '(' EXPRESSION_LIST ')'

   77 EXPRESSION_LIST: EXPRESSION_LIST ',' EXPRESSION
   78                | EXPRESSION

   79 SELECTION_STATEMENT: IF '(' EXPRESSION ')' STATEMENT
   80                    | IF '(' EXPRESSION ')' STATEMENT ELSE STATEMENT
   81                    | SWITCH '(' EXPRESSION ')' STATEMENT

   82 ITERATION_STATEMENT: WHILE '(' EXPRESSION ')' STATEMENT
   83                    | DO STATEMENT WHILE '(' EXPRESSION ')' ';'
   84                    | FOR '(' EXPRESSION_STATEMENT EXPRESSION_STATEMENT ')' STATEMENT
   85                    | FOR '(' EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION ')' STATEMENT

   86 JUMP_STATEMENT: CONTINUE ';'
   87               | BREAK ';'
   88               | RETURN ';'
   89               | RETURN EXPRESSION


Terminals, with rules where they appear

$end (0) 0
'(' (40) 30 34 35 36 37 71 75 76 79 80 81 82 83 84 85
')' (41) 30 34 35 36 37 71 75 76 79 80 81 82 83 84 85
',' (44) 25 38 41 77
':' (58) 55 56
';' (59) 5 54 57 58 83 86 87 88
'=' (61) 27 28 60
'[' (91) 31 32
']' (93) 31 32
'{' (123) 43 44
'}' (125) 43 44
error (256) 54
AUTO (258) 13
BREAK (259) 87
CASE (260) 55
CHAR (261) 16
CONST (262)
CONTINUE (263) 86
DEFAULT (264) 56
DO (265) 83
DOUBLE (266) 21
ELSE (267) 80
ENUM (268)
EXTERN (269) 11
FLOAT (270) 20
FOR (271) 84 85
GOTO (272)
IF (273) 79 80
INT (274) 18
LONG (275) 19
REGISTER (276) 14
RETURN (277) 88 89
SHORT (278) 17
SIGNED (279) 22
SIZEOF (280)
STATIC (281) 12
STRUCT (282)
SWITCH (283) 81
TYPEDEF (284) 10
UNION (285)
UNSIGNED (286) 23
VOID (287) 15
VOLATILE (288)
WHILE (289) 82 83
IDENTIFIER (290) 29 34 35 36 37 42 59 60 72 75 76
CONSTANT (291) 31 73
STRING_LITERAL (292) 28
ASSIGN_OP (293) 59
REL_OP (294) 62
ADD_OP (295) 63
MUL_OP (296) 64
INCDEC_OP (297)
EQU_OP (298) 61
LAND (299) 65
LOR (300) 66
BAND (301) 68
BXOR (302) 69
BOR (303) 67
NOT_OP (304) 70
LOWER_THAN_ELSE (305)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
PROGRAM (62)
    on left: 1 2, on right: 0 2
EXTERNAL_DECLARATION (63)
    on left: 3 4, on right: 1 2
DECLARATION (64)
    on left: 5, on right: 4 53
DECLARATION_SPECIFIER (65)
    on left: 6 7 8 9, on right: 5 7 9 36 37 38 39 42
STORAGE_CLASS_SPECIFIER (66)
    on left: 10 11 12 13 14, on right: 6 7
TYPE_SPECIFIER (67)
    on left: 15 16 17 18 19 20 21 22 23, on right: 8 9
INIT_DECLARATOR_LIST (68)
    on left: 24 25, on right: 5 25
INIT_DECLARATOR (69)
    on left: 26 27 28, on right: 24 25
DECLARATOR (70)
    on left: 29 30 31 32 33, on right: 26 27 28 30 31 32
FUNCTION_DECLARATION (71)
    on left: 34 35, on right: 33
FUNCTION_DEFINITION (72)
    on left: 36 37, on right: 3
DECLARATION_SPECIFIER_LIST (73)
    on left: 38 39, on right: 34 38
DEFINITION_SPECIFIER_LIST (74)
    on left: 40 41, on right: 37 41
VARIABLE_DECLARATION (75)
    on left: 42, on right: 40 41
COMPOUND_STATEMENT (76)
    on left: 43 44, on right: 36 37 48
STATEMENT_LIST (77)
    on left: 45 46, on right: 43 45
STATEMENT (78)
    on left: 47 48 49 50 51 52 53 54, on right: 45 46 55 56 79 80 81
    82 83 84 85
LABELED_STATEMENT (79)
    on left: 55 56, on right: 47
EXPRESSION_STATEMENT (80)
    on left: 57 58, on right: 49 84 85
EXPRESSION (81)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74, on right:
    27 55 58 59 60 61 62 63 64 65 66 67 68 69 70 71 77 78 79 80 81
    82 83 85 89
FUNCTION_CALL (82)
    on left: 75 76, on right: 74
EXPRESSION_LIST (83)
    on left: 77 78, on right: 76 77
SELECTION_STATEMENT (84)
    on left: 79 80 81, on right: 51
ITERATION_STATEMENT (85)
    on left: 82 83 84 85, on right: 50
JUMP_STATEMENT (86)
    on left: 86 87 88 89, on right: 52


State 0

    0 $accept: . PROGRAM $end

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14

    PROGRAM                  go to state 15
    EXTERNAL_DECLARATION     go to state 16
    DECLARATION              go to state 17
    DECLARATION_SPECIFIER    go to state 18
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20
    FUNCTION_DEFINITION      go to state 21


State 1

   13 STORAGE_CLASS_SPECIFIER: AUTO .

    $default  reduce using rule 13 (STORAGE_CLASS_SPECIFIER)


State 2

   16 TYPE_SPECIFIER: CHAR .

    $default  reduce using rule 16 (TYPE_SPECIFIER)


State 3

   21 TYPE_SPECIFIER: DOUBLE .

    $default  reduce using rule 21 (TYPE_SPECIFIER)


State 4

   11 STORAGE_CLASS_SPECIFIER: EXTERN .

    $default  reduce using rule 11 (STORAGE_CLASS_SPECIFIER)


State 5

   20 TYPE_SPECIFIER: FLOAT .

    $default  reduce using rule 20 (TYPE_SPECIFIER)


State 6

   18 TYPE_SPECIFIER: INT .

    $default  reduce using rule 18 (TYPE_SPECIFIER)


State 7

   19 TYPE_SPECIFIER: LONG .

    $default  reduce using rule 19 (TYPE_SPECIFIER)


State 8

   14 STORAGE_CLASS_SPECIFIER: REGISTER .

    $default  reduce using rule 14 (STORAGE_CLASS_SPECIFIER)


State 9

   17 TYPE_SPECIFIER: SHORT .

    $default  reduce using rule 17 (TYPE_SPECIFIER)


State 10

   22 TYPE_SPECIFIER: SIGNED .

    $default  reduce using rule 22 (TYPE_SPECIFIER)


State 11

   12 STORAGE_CLASS_SPECIFIER: STATIC .

    $default  reduce using rule 12 (STORAGE_CLASS_SPECIFIER)


State 12

   10 STORAGE_CLASS_SPECIFIER: TYPEDEF .

    $default  reduce using rule 10 (STORAGE_CLASS_SPECIFIER)


State 13

   23 TYPE_SPECIFIER: UNSIGNED .

    $default  reduce using rule 23 (TYPE_SPECIFIER)


State 14

   15 TYPE_SPECIFIER: VOID .

    $default  reduce using rule 15 (TYPE_SPECIFIER)


State 15

    0 $accept: PROGRAM . $end
    2 PROGRAM: PROGRAM . EXTERNAL_DECLARATION

    $end      shift, and go to state 22
    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14

    EXTERNAL_DECLARATION     go to state 23
    DECLARATION              go to state 17
    DECLARATION_SPECIFIER    go to state 18
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20
    FUNCTION_DEFINITION      go to state 21


State 16

    1 PROGRAM: EXTERNAL_DECLARATION .

    $default  reduce using rule 1 (PROGRAM)


State 17

    4 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 4 (EXTERNAL_DECLARATION)


State 18

    5 DECLARATION: DECLARATION_SPECIFIER . INIT_DECLARATOR_LIST ';'
   36 FUNCTION_DEFINITION: DECLARATION_SPECIFIER . IDENTIFIER '(' ')' COMPOUND_STATEMENT
   37                    | DECLARATION_SPECIFIER . IDENTIFIER '(' DEFINITION_SPECIFIER_LIST ')' COMPOUND_STATEMENT

    IDENTIFIER  shift, and go to state 24
    '('         shift, and go to state 25

    INIT_DECLARATOR_LIST  go to state 26
    INIT_DECLARATOR       go to state 27
    DECLARATOR            go to state 28
    FUNCTION_DECLARATION  go to state 29


State 19

    6 DECLARATION_SPECIFIER: STORAGE_CLASS_SPECIFIER .
    7                      | STORAGE_CLASS_SPECIFIER . DECLARATION_SPECIFIER

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14

    $default  reduce using rule 6 (DECLARATION_SPECIFIER)

    DECLARATION_SPECIFIER    go to state 30
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20


State 20

    8 DECLARATION_SPECIFIER: TYPE_SPECIFIER .
    9                      | TYPE_SPECIFIER . DECLARATION_SPECIFIER

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14

    $default  reduce using rule 8 (DECLARATION_SPECIFIER)

    DECLARATION_SPECIFIER    go to state 31
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20


State 21

    3 EXTERNAL_DECLARATION: FUNCTION_DEFINITION .

    $default  reduce using rule 3 (EXTERNAL_DECLARATION)


State 22

    0 $accept: PROGRAM $end .

    $default  accept


State 23

    2 PROGRAM: PROGRAM EXTERNAL_DECLARATION .

    $default  reduce using rule 2 (PROGRAM)


State 24

   29 DECLARATOR: IDENTIFIER .
   34 FUNCTION_DECLARATION: IDENTIFIER . '(' DECLARATION_SPECIFIER_LIST ')'
   35                     | IDENTIFIER . '(' ')'
   36 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER . '(' ')' COMPOUND_STATEMENT
   37                    | DECLARATION_SPECIFIER IDENTIFIER . '(' DEFINITION_SPECIFIER_LIST ')' COMPOUND_STATEMENT

    '('  shift, and go to state 32

    $default  reduce using rule 29 (DECLARATOR)


State 25

   30 DECLARATOR: '(' . DECLARATOR ')'

    IDENTIFIER  shift, and go to state 33
    '('         shift, and go to state 25

    DECLARATOR            go to state 34
    FUNCTION_DECLARATION  go to state 29


State 26

    5 DECLARATION: DECLARATION_SPECIFIER INIT_DECLARATOR_LIST . ';'
   25 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . ',' INIT_DECLARATOR

    ';'  shift, and go to state 35
    ','  shift, and go to state 36


State 27

   24 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 24 (INIT_DECLARATOR_LIST)


State 28

   26 INIT_DECLARATOR: DECLARATOR .
   27                | DECLARATOR . '=' EXPRESSION
   28                | DECLARATOR . '=' STRING_LITERAL
   31 DECLARATOR: DECLARATOR . '[' CONSTANT ']'
   32           | DECLARATOR . '[' ']'

    '='  shift, and go to state 37
    '['  shift, and go to state 38

    $default  reduce using rule 26 (INIT_DECLARATOR)


State 29

   33 DECLARATOR: FUNCTION_DECLARATION .

    $default  reduce using rule 33 (DECLARATOR)


State 30

    7 DECLARATION_SPECIFIER: STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIER .

    $default  reduce using rule 7 (DECLARATION_SPECIFIER)


State 31

    9 DECLARATION_SPECIFIER: TYPE_SPECIFIER DECLARATION_SPECIFIER .

    $default  reduce using rule 9 (DECLARATION_SPECIFIER)


State 32

   34 FUNCTION_DECLARATION: IDENTIFIER '(' . DECLARATION_SPECIFIER_LIST ')'
   35                     | IDENTIFIER '(' . ')'
   36 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER '(' . ')' COMPOUND_STATEMENT
   37                    | DECLARATION_SPECIFIER IDENTIFIER '(' . DEFINITION_SPECIFIER_LIST ')' COMPOUND_STATEMENT

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14
    ')'       shift, and go to state 39

    DECLARATION_SPECIFIER       go to state 40
    STORAGE_CLASS_SPECIFIER     go to state 19
    TYPE_SPECIFIER              go to state 20
    DECLARATION_SPECIFIER_LIST  go to state 41
    DEFINITION_SPECIFIER_LIST   go to state 42
    VARIABLE_DECLARATION        go to state 43


State 33

   29 DECLARATOR: IDENTIFIER .
   34 FUNCTION_DECLARATION: IDENTIFIER . '(' DECLARATION_SPECIFIER_LIST ')'
   35                     | IDENTIFIER . '(' ')'

    '('  shift, and go to state 44

    $default  reduce using rule 29 (DECLARATOR)


State 34

   30 DECLARATOR: '(' DECLARATOR . ')'
   31           | DECLARATOR . '[' CONSTANT ']'
   32           | DECLARATOR . '[' ']'

    ')'  shift, and go to state 45
    '['  shift, and go to state 38


State 35

    5 DECLARATION: DECLARATION_SPECIFIER INIT_DECLARATOR_LIST ';' .

    $default  reduce using rule 5 (DECLARATION)


State 36

   25 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST ',' . INIT_DECLARATOR

    IDENTIFIER  shift, and go to state 33
    '('         shift, and go to state 25

    INIT_DECLARATOR       go to state 46
    DECLARATOR            go to state 28
    FUNCTION_DECLARATION  go to state 29


State 37

   27 INIT_DECLARATOR: DECLARATOR '=' . EXPRESSION
   28                | DECLARATOR '=' . STRING_LITERAL

    IDENTIFIER      shift, and go to state 47
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    NOT_OP          shift, and go to state 50
    '('             shift, and go to state 51

    EXPRESSION     go to state 52
    FUNCTION_CALL  go to state 53


State 38

   31 DECLARATOR: DECLARATOR '[' . CONSTANT ']'
   32           | DECLARATOR '[' . ']'

    CONSTANT  shift, and go to state 54
    ']'       shift, and go to state 55


State 39

   35 FUNCTION_DECLARATION: IDENTIFIER '(' ')' .
   36 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER '(' ')' . COMPOUND_STATEMENT

    '{'  shift, and go to state 56

    $default  reduce using rule 35 (FUNCTION_DECLARATION)

    COMPOUND_STATEMENT  go to state 57


State 40

   39 DECLARATION_SPECIFIER_LIST: DECLARATION_SPECIFIER .
   42 VARIABLE_DECLARATION: DECLARATION_SPECIFIER . IDENTIFIER

    IDENTIFIER  shift, and go to state 58

    $default  reduce using rule 39 (DECLARATION_SPECIFIER_LIST)


State 41

   34 FUNCTION_DECLARATION: IDENTIFIER '(' DECLARATION_SPECIFIER_LIST . ')'
   38 DECLARATION_SPECIFIER_LIST: DECLARATION_SPECIFIER_LIST . ',' DECLARATION_SPECIFIER

    ','  shift, and go to state 59
    ')'  shift, and go to state 60


State 42

   37 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER '(' DEFINITION_SPECIFIER_LIST . ')' COMPOUND_STATEMENT
   41 DEFINITION_SPECIFIER_LIST: DEFINITION_SPECIFIER_LIST . ',' VARIABLE_DECLARATION

    ','  shift, and go to state 61
    ')'  shift, and go to state 62


State 43

   40 DEFINITION_SPECIFIER_LIST: VARIABLE_DECLARATION .

    $default  reduce using rule 40 (DEFINITION_SPECIFIER_LIST)


State 44

   34 FUNCTION_DECLARATION: IDENTIFIER '(' . DECLARATION_SPECIFIER_LIST ')'
   35                     | IDENTIFIER '(' . ')'

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14
    ')'       shift, and go to state 63

    DECLARATION_SPECIFIER       go to state 64
    STORAGE_CLASS_SPECIFIER     go to state 19
    TYPE_SPECIFIER              go to state 20
    DECLARATION_SPECIFIER_LIST  go to state 41


State 45

   30 DECLARATOR: '(' DECLARATOR ')' .

    $default  reduce using rule 30 (DECLARATOR)


State 46

   25 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST ',' INIT_DECLARATOR .

    $default  reduce using rule 25 (INIT_DECLARATOR_LIST)


State 47

   59 EXPRESSION: IDENTIFIER . ASSIGN_OP EXPRESSION
   60           | IDENTIFIER . '=' EXPRESSION
   72           | IDENTIFIER .
   75 FUNCTION_CALL: IDENTIFIER . '(' ')'
   76              | IDENTIFIER . '(' EXPRESSION_LIST ')'

    ASSIGN_OP  shift, and go to state 65
    '='        shift, and go to state 66
    '('        shift, and go to state 67

    '('       [reduce using rule 72 (EXPRESSION)]
    $default  reduce using rule 72 (EXPRESSION)


State 48

   73 EXPRESSION: CONSTANT .

    $default  reduce using rule 73 (EXPRESSION)


State 49

   28 INIT_DECLARATOR: DECLARATOR '=' STRING_LITERAL .

    $default  reduce using rule 28 (INIT_DECLARATOR)


State 50

   70 EXPRESSION: NOT_OP . EXPRESSION

    IDENTIFIER  shift, and go to state 47
    CONSTANT    shift, and go to state 48
    NOT_OP      shift, and go to state 50
    '('         shift, and go to state 51

    EXPRESSION     go to state 68
    FUNCTION_CALL  go to state 53


State 51

   71 EXPRESSION: '(' . EXPRESSION ')'

    IDENTIFIER  shift, and go to state 47
    CONSTANT    shift, and go to state 48
    NOT_OP      shift, and go to state 50
    '('         shift, and go to state 51

    EXPRESSION     go to state 69
    FUNCTION_CALL  go to state 53


State 52

   27 INIT_DECLARATOR: DECLARATOR '=' EXPRESSION .
   61 EXPRESSION: EXPRESSION . EQU_OP EXPRESSION
   62           | EXPRESSION . REL_OP EXPRESSION
   63           | EXPRESSION . ADD_OP EXPRESSION
   64           | EXPRESSION . MUL_OP EXPRESSION
   65           | EXPRESSION . LAND EXPRESSION
   66           | EXPRESSION . LOR EXPRESSION
   67           | EXPRESSION . BOR EXPRESSION
   68           | EXPRESSION . BAND EXPRESSION
   69           | EXPRESSION . BXOR EXPRESSION

    REL_OP  shift, and go to state 70
    ADD_OP  shift, and go to state 71
    MUL_OP  shift, and go to state 72
    EQU_OP  shift, and go to state 73
    LAND    shift, and go to state 74
    LOR     shift, and go to state 75
    BAND    shift, and go to state 76
    BXOR    shift, and go to state 77
    BOR     shift, and go to state 78

    $default  reduce using rule 27 (INIT_DECLARATOR)


State 53

   74 EXPRESSION: FUNCTION_CALL .

    $default  reduce using rule 74 (EXPRESSION)


State 54

   31 DECLARATOR: DECLARATOR '[' CONSTANT . ']'

    ']'  shift, and go to state 79


State 55

   32 DECLARATOR: DECLARATOR '[' ']' .

    $default  reduce using rule 32 (DECLARATOR)


State 56

   43 COMPOUND_STATEMENT: '{' . STATEMENT_LIST '}'
   44                   | '{' . '}'

    error       shift, and go to state 80
    AUTO        shift, and go to state 1
    BREAK       shift, and go to state 81
    CASE        shift, and go to state 82
    CHAR        shift, and go to state 2
    CONTINUE    shift, and go to state 83
    DEFAULT     shift, and go to state 84
    DO          shift, and go to state 85
    DOUBLE      shift, and go to state 3
    EXTERN      shift, and go to state 4
    FLOAT       shift, and go to state 5
    FOR         shift, and go to state 86
    IF          shift, and go to state 87
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    REGISTER    shift, and go to state 8
    RETURN      shift, and go to state 88
    SHORT       shift, and go to state 9
    SIGNED      shift, and go to state 10
    STATIC      shift, and go to state 11
    SWITCH      shift, and go to state 89
    TYPEDEF     shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    VOID        shift, and go to state 14
    WHILE       shift, and go to state 90
    IDENTIFIER  shift, and go to state 47
    CONSTANT    shift, and go to state 48
    NOT_OP      shift, and go to state 50
    ';'         shift, and go to state 91
    '('         shift, and go to state 51
    '{'         shift, and go to state 56
    '}'         shift, and go to state 92

    DECLARATION              go to state 93
    DECLARATION_SPECIFIER    go to state 94
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20
    COMPOUND_STATEMENT       go to state 95
    STATEMENT_LIST           go to state 96
    STATEMENT                go to state 97
    LABELED_STATEMENT        go to state 98
    EXPRESSION_STATEMENT     go to state 99
    EXPRESSION               go to state 100
    FUNCTION_CALL            go to state 53
    SELECTION_STATEMENT      go to state 101
    ITERATION_STATEMENT      go to state 102
    JUMP_STATEMENT           go to state 103


State 57

   36 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER '(' ')' COMPOUND_STATEMENT .

    $default  reduce using rule 36 (FUNCTION_DEFINITION)


State 58

   42 VARIABLE_DECLARATION: DECLARATION_SPECIFIER IDENTIFIER .

    $default  reduce using rule 42 (VARIABLE_DECLARATION)


State 59

   38 DECLARATION_SPECIFIER_LIST: DECLARATION_SPECIFIER_LIST ',' . DECLARATION_SPECIFIER

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14

    DECLARATION_SPECIFIER    go to state 104
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20


State 60

   34 FUNCTION_DECLARATION: IDENTIFIER '(' DECLARATION_SPECIFIER_LIST ')' .

    $default  reduce using rule 34 (FUNCTION_DECLARATION)


State 61

   41 DEFINITION_SPECIFIER_LIST: DEFINITION_SPECIFIER_LIST ',' . VARIABLE_DECLARATION

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    REGISTER  shift, and go to state 8
    SHORT     shift, and go to state 9
    SIGNED    shift, and go to state 10
    STATIC    shift, and go to state 11
    TYPEDEF   shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    VOID      shift, and go to state 14

    DECLARATION_SPECIFIER    go to state 105
    STORAGE_CLASS_SPECIFIER  go to state 19
    TYPE_SPECIFIER           go to state 20
    VARIABLE_DECLARATION     go to state 106


State 62

   37 FUNCTION_DEFINITION: DECLARATION_SPECIFIER IDENTIFIER '(' DEFINITION_SPECIFIER_LIST ')' . COMPOUND_STATEMENT

    '{'  shift, and go to state 56

    COMPOUND_STATEMENT  go to state 107


State 63

   35 FUNCTION_DECLARATION: IDENTIFIER '(' ')' .

    $default  reduce using rule 35 (FUNCTION_DECLARATION)


State 64

   39 DECLARATION_SPECIFIER_LIST: DECLARATION_SPECIFIER .

    $default  reduce using rule 39 (DECLARATION_SPECIFIER_LIST)


State 65

   59 EXPRESSION: IDENTIFIER ASSIGN_OP . EXPRESSION

    IDENTIFIER  shift, and go to state 47
    CONSTANT    shift, and go to state 48
    NOT_OP      shift, and go to state 50
    '('         shift, and go to state 51

    EXPRESSION     go to state 108
    FUNCTION_CALL  go to state 53


State 66

   60 EXPRESSION: IDENTIFIER '=' . EXPRESSION

    IDENTIFIER  shift, and go to state 47
    CONSTANT    shift, and go to state 48
    NOT_OP      shift, and go to state 50
    '('         shift, and go to state 51

    EXPRESSION     go to state 109
    FUNCTION_CALL  go to state 53


State 67

   75 FUNCTION_CALL: IDENTIFIER '(' . ')'
   76              | IDENTIFIER '(' . EXPRESSION_LIST ')'

    IDENTIFIER  shift, and go to state 47
    CONSTANT    shift, and go to state 48
    NOT_OP      shift, and go to state 50
    '('         shift, and go to state 51
    ')'         shift, and go to state 110

    EXPRESSION       go to state 111
    FUNCTION_CALL    go to state 53
    EXPRESSION_LIST  go to state 112


State 68

   61 EXPRESSION: EXPRESSION . EQU_OP EXPRESSION
   62           | EXPRESSION . REL_OP EXPRESSION
   63           | EXPRESSION . ADD_OP EXPRESSION
   64           | EXPRESSION . MUL_OP EXPRESSION
   65           | EXPRESSION . LAND EXPRESSION
   66           | EXPRESSION . LOR EXPRESSION
   67           | EXPRESSION . BOR EXPRESSION
   68           | EXPRESSION . BAND EXPRESSION
   69           | EXPRESSION . BXOR EXPRESSION
   70           | NOT_OP EXPRESSION .

    $default  reduce using rule 70 (EXPRESSION)


State 69
